[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/hud/note.png" type="Texture" id=1]
[ext_resource path="res://scenes/MenuScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/hud/shadowCharacters.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/PearSoda.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 125, 158 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 3 )
hframes = 11
region_rect = Rect2( 0, 0, 1024, 64 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -64.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
custom_colors/default_color = Color( 0.403922, 0.12549, 0.00392157, 1 )
custom_fonts/normal_font = ExtResource( 4 )
scroll_active = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BottomLabel" type="Label" parent="."]
margin_left = -96.0
margin_top = 128.0
margin_right = 96.0
margin_bottom = 144.0
custom_colors/font_color = Color( 0.403922, 0.12549, 0.00392157, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
